--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-		<title>Calcalenderder</title>
+		<title>Calcalendarder</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
